--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,121 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
+
+body {
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.markdown {
+  font-family: 'Josefin Sans', sans-serif;
+  color: #e3d1e6;
+}
+
+.markdown h1 {
+  color: #a56baf;
+  font-weight: 700;
+  font-size: clamp(28px, 4.2vw, 40px);
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.markdown h2 {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
+  font-size: clamp(20px, 3.2vw, 32px);
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.markdown a {
+  color: #a56baf;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.markdown a:hover {
+  color: #6d3f75;
+}
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  /* --bg-main-dark: #181D31; */
+  --bg-main-dark: #061515;
+  --bg-secondary-dark: #040505;
+  --bg-tertiary-dark: #1e2626;
+  --text-main-dark: #e3d1e6;
+  --text-secondary-dark: #a56baf;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --bg-main-light: #d9f6f5;
+  --text-main-light: #58335e;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.bg-main-dark {
+  background: var(--bg-main-dark)
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+.bg-main-light {
+  background: var(--bg-main-light)
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.bg-secondary-dark {
+  background: var(--bg-secondary-dark)
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+.bg-tertiary-dark {
+  background: var(--bg-tertiary-dark)
+}
+
+.text-main-dark {
+  color: var(--text-main-dark)
+}
+
+.text-main-light {
+  color: var(--text-main-light)
+}
+
+.button {
+  position: relative;
+  cursor: pointer;
+  transition: 0.4s cubic-bezier(0.25, 0, 0, 1);
+  z-index: 2;
+  overflow: hidden;
+  /* width: fit-content; */
+}
+
+.button-primary {
+  background-color: #d9f6f5;
+  color: #58335e
+}
+
+.button-secondary {
+  background-color: #061515;
+  color: #e3d1e6
+}
+
+.button:hover {
+  transform: scale(1.05);
+}
+
+@layer base {
+  h1 {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: clamp(28px, 4.2vw, 40px);
+    font-weight: 900;
+  }
+
+  h2 {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: clamp(20px, 3.2vw, 32px);
+    font-weight: 500;
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.title {
+  font-size: clamp(42px, 4.2vw, 56px);
+  font-weight: 800;
 }
